--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Epilogue:thin,light,regular,medium,bold,black&subset=latin,latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Nunito+Sans:extra-light&subset=latin,latin-ext');
 /* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
